# philosopher

./: .gitignore  CMakeLists.txt  Makefile
include/: fork.h  parser.h  philo.h  print.h
philo/: Makefile
philo/include/: fork.h  philo.h  print.h
philo/src/: fork.c  main.c  parser.c  philo.c  philo_clear.c  philo_eat.c  philo_equalizer.c  philo_init.c  philo_print.c  philo_time.c  philo_utils.c
src/: fork.c  main.c  parser.c  philo.c  philo_eat.c  philo_init.c  philo_print.c  philo_utils.c
